# scotts-kiwi-iot-device

./: .gitignore  README.md  pyproject.toml
src/: az_utils.py  main.py
